test: 변경된 테스트 작성 지침에 따라 리팩토링