@@ -15,10 +15,13 @@ import aegis.server.domain.coupon.dto.request.CouponCodeCreateRequest;
 import aegis.server.domain.coupon.dto.request.CouponCodeUseRequest;
 import aegis.server.domain.coupon.dto.request.CouponCreateRequest;
 import aegis.server.domain.coupon.dto.request.CouponIssueRequest;
+import aegis.server.domain.coupon.dto.response.CouponCodeResponse;
+import aegis.server.domain.coupon.dto.response.CouponResponse;
+import aegis.server.domain.coupon.dto.response.IssuedCouponResponse;
 import aegis.server.domain.coupon.repository.CouponCodeRepository;
 import aegis.server.domain.coupon.repository.CouponRepository;
 import aegis.server.domain.coupon.repository.IssuedCouponRepository;
-import aegis.server.domain.member.domain.Member;
+import aegis.server.domain.member.domain.*;
 import aegis.server.global.exception.CustomException;
 import aegis.server.global.exception.ErrorCode;
 import aegis.server.global.security.oidc.UserDetails;
@@ -50,11 +53,17 @@ class CouponServiceTest extends IntegrationTest {
             CouponCreateRequest couponCreateRequest = new CouponCreateRequest(COUPON_NAME, BigDecimal.valueOf(5000));
 
             // when
-            couponService.createCoupon(couponCreateRequest);
+            CouponResponse response = couponService.createCoupon(couponCreateRequest);
 
             // then
-            Coupon coupon = couponRepository.findById(1L).get();
+            // 반환값 검증
+            assertNotNull(response.couponId());
+            assertNotNull(response.createdAt());
+            assertEquals(couponCreateRequest.couponName(), response.couponName());
+            assertEquals(couponCreateRequest.discountAmount(), response.discountAmount());
 
+            // DB 상태 검증
+            Coupon coupon = couponRepository.findById(response.couponId()).get();
             assertEquals(couponCreateRequest.couponName(), coupon.getCouponName());
             assertEquals(couponCreateRequest.discountAmount(), coupon.getDiscountAmount());
         }
@@ -85,63 +94,80 @@ class CouponServiceTest extends IntegrationTest {
             CustomException exception = assertThrows(CustomException.class, () -> couponService.createCoupon(request));
             assertEquals(ErrorCode.COUPON_ALREADY_EXISTS, exception.getErrorCode());
         }
+    }
 
-        @Nested
-        class 쿠폰발급 {
-            @Test
-            void 성공한다() {
-                // given
-                createMember();
-                createMember();
+    @Nested
+    class 쿠폰발급 {
+        @Test
+        void 성공한다() {
+            // given
+            Member member1 = createMember();
+            Member member2 = createMember();
+            Coupon coupon = createCoupon();
+            CouponIssueRequest couponIssueRequest =
+                    new CouponIssueRequest(coupon.getId(), List.of(member1.getId(), member2.getId()));
 
-                CouponCreateRequest couponCreateRequest =
-                        new CouponCreateRequest(COUPON_NAME, BigDecimal.valueOf(5000L));
-                couponService.createCoupon(couponCreateRequest);
+            // when
+            List<IssuedCouponResponse> responses = couponService.createIssuedCoupon(couponIssueRequest);
 
-                CouponIssueRequest couponIssueRequest = new CouponIssueRequest(1L, List.of(1L, 2L));
+            // then
+            // 반환값 검증
+            assertEquals(2, responses.size());
+            assertEquals(member1.getId(), responses.get(0).memberId());
+            assertEquals(member2.getId(), responses.get(1).memberId());
+            assertEquals(coupon.getCouponName(), responses.get(0).couponName());
+            assertEquals(coupon.getCouponName(), responses.get(1).couponName());
 
-                // when
-                couponService.createIssuedCoupon(couponIssueRequest);
+            // DB 상태 검증
+            IssuedCoupon issuedCoupon1 = issuedCouponRepository
+                    .findById(responses.get(0).issuedCouponId())
+                    .get();
+            IssuedCoupon issuedCoupon2 = issuedCouponRepository
+                    .findById(responses.get(1).issuedCouponId())
+                    .get();
+            assertEquals(member1.getId(), issuedCoupon1.getMember().getId());
+            assertEquals(member2.getId(), issuedCoupon2.getMember().getId());
+            assertEquals(coupon.getId(), issuedCoupon1.getCoupon().getId());
+            assertEquals(coupon.getId(), issuedCoupon2.getCoupon().getId());
+        }
 
-                // then
-                List<IssuedCoupon> issuedCoupons = issuedCouponRepository.findAll();
-                assertEquals(2, issuedCoupons.size());
-                assertEquals(1L, issuedCoupons.get(0).getMember().getId());
-                assertEquals(2L, issuedCoupons.get(1).getMember().getId());
-            }
+        @Test
+        void 존재하지_않는_멤버이면_제외하고_성공한다() {
+            // given
+            Member member = createMember();
+            Coupon coupon = createCoupon();
+            Long nonExistentMemberId = member.getId() + 1L;
+            CouponIssueRequest couponIssueRequest =
+                    new CouponIssueRequest(coupon.getId(), List.of(member.getId(), nonExistentMemberId));
 
-            @Test
-            void 존재하지_않는_멤버이면_제외하고_성공한다() {
-                // given
-                createMember();
+            // when
+            List<IssuedCouponResponse> responses = couponService.createIssuedCoupon(couponIssueRequest);
 
-                CouponCreateRequest couponCreateRequest =
-                        new CouponCreateRequest(COUPON_NAME, BigDecimal.valueOf(5000L));
-                couponService.createCoupon(couponCreateRequest);
+            // then
+            // 반환값 검증
+            assertEquals(1, responses.size());
+            assertEquals(member.getId(), responses.getFirst().memberId());
 
-                CouponIssueRequest couponIssueRequest = new CouponIssueRequest(1L, List.of(1L, 2L));
+            // DB 상태 검증
+            IssuedCoupon issuedCoupon = issuedCouponRepository
+                    .findById(responses.getFirst().issuedCouponId())
+                    .get();
+            assertEquals(member.getId(), issuedCoupon.getMember().getId());
+            assertEquals(coupon.getId(), issuedCoupon.getCoupon().getId());
+        }
 
-                // when
-                couponService.createIssuedCoupon(couponIssueRequest);
+        @Test
+        void 존재하지_않는_쿠폰이면_실패한다() {
+            // given
+            Member member = createMember();
+            Long nonExistentCouponId = member.getId() + 999L;
+            CouponIssueRequest couponIssueRequest =
+                    new CouponIssueRequest(nonExistentCouponId, List.of(member.getId()));
 
-                // then
-                List<IssuedCoupon> issuedCoupons = issuedCouponRepository.findAll();
-                assertEquals(1, issuedCoupons.size());
-                assertEquals(1L, issuedCoupons.get(0).getMember().getId());
-            }
-
-            @Test
-            void 존재하지_않는_쿠폰이면_실패한다() {
-                // given
-                createMember();
-
-                CouponIssueRequest couponIssueRequest = new CouponIssueRequest(1L, List.of(1L));
-
-                // when-then
-                CustomException exception =
-                        assertThrows(CustomException.class, () -> couponService.createIssuedCoupon(couponIssueRequest));
-                assertEquals(ErrorCode.COUPON_NOT_FOUND, exception.getErrorCode());
-            }
+            // when-then
+            CustomException exception =
+                    assertThrows(CustomException.class, () -> couponService.createIssuedCoupon(couponIssueRequest));
+            assertEquals(ErrorCode.COUPON_NOT_FOUND, exception.getErrorCode());
         }
     }
 
@@ -150,9 +176,7 @@ class CouponServiceTest extends IntegrationTest {
         @Test
         void 성공한다() {
             // given
-            CouponCreateRequest request = new CouponCreateRequest("삭제테스트쿠폰", BigDecimal.valueOf(5000));
-            couponService.createCoupon(request);
-            Coupon coupon = couponRepository.findAll().get(0);
+            Coupon coupon = createCoupon();
 
             // when
             couponService.deleteCoupon(coupon.getId());
@@ -171,16 +195,16 @@ class CouponServiceTest extends IntegrationTest {
         @Test
         void 발급된_쿠폰이_존재하면_삭제에_실패한다() {
             // given
-            createMember(); // 존재하는 멤버 생성 (예: id=1)
-            CouponCreateRequest request = new CouponCreateRequest("발급된쿠폰테스트", BigDecimal.valueOf(5000));
-            couponService.createCoupon(request);
+            Member member = createMember();
+            Coupon coupon = createCoupon();
+            CouponIssueRequest issueRequest = new CouponIssueRequest(coupon.getId(), List.of(member.getId()));
 
-            // 쿠폰 발급: coupon id 1, member id 1
-            CouponIssueRequest issueRequest = new CouponIssueRequest(1L, List.of(1L));
+            // 쿠폰 발급
             couponService.createIssuedCoupon(issueRequest);
 
             // when-then
-            CustomException exception = assertThrows(CustomException.class, () -> couponService.deleteCoupon(1L));
+            CustomException exception =
+                    assertThrows(CustomException.class, () -> couponService.deleteCoupon(coupon.getId()));
             assertEquals(ErrorCode.COUPON_ISSUED_COUPON_EXISTS, exception.getErrorCode());
         }
     }
@@ -190,20 +214,17 @@ class CouponServiceTest extends IntegrationTest {
         @Test
         void 성공한다() {
             // given
-            createMember();
-            CouponCreateRequest couponRequest = new CouponCreateRequest("발급쿠폰삭제테스트", BigDecimal.valueOf(5000));
-            couponService.createCoupon(couponRequest);
-
-            // 쿠폰 발급: coupon id 1, member id 1
-            CouponIssueRequest issueRequest = new CouponIssueRequest(1L, List.of(1L));
-            couponService.createIssuedCoupon(issueRequest);
-            IssuedCoupon issuedCoupon = issuedCouponRepository.findAll().get(0);
+            Member member = createMember();
+            Coupon coupon = createCoupon();
+            CouponIssueRequest issueRequest = new CouponIssueRequest(coupon.getId(), List.of(member.getId()));
+            List<IssuedCouponResponse> responses = couponService.createIssuedCoupon(issueRequest);
+            Long issuedCouponId = responses.getFirst().issuedCouponId();
 
             // when
-            couponService.deleteIssuedCoupon(issuedCoupon.getId());
+            couponService.deleteIssuedCoupon(issuedCouponId);
 
             // then
-            assertTrue(issuedCouponRepository.findById(issuedCoupon.getId()).isEmpty());
+            assertTrue(issuedCouponRepository.findById(issuedCouponId).isEmpty());
         }
 
         @Test
@@ -215,21 +236,32 @@ class CouponServiceTest extends IntegrationTest {
         }
     }
 
-    @Test
-    void 쿠폰코드_발급에_성공한다() {
-        // given
-        createMember();
-        CouponCreateRequest couponRequest = new CouponCreateRequest("쿠폰코드발급테스트", BigDecimal.valueOf(5000));
-        couponService.createCoupon(couponRequest);
+    @Nested
+    class 쿠폰코드_발급 {
+        @Test
+        void 성공한다() {
+            // given
+            Coupon coupon = createCoupon();
+            CouponCodeCreateRequest codeCreateRequest = new CouponCodeCreateRequest(coupon.getId());
 
-        CouponCodeCreateRequest codeCreateRequest = new CouponCodeCreateRequest(1L);
+            // when
+            CouponCodeResponse response = couponService.createCouponCode(codeCreateRequest);
 
-        // when
-        couponService.createCouponCode(codeCreateRequest);
+            // then
+            // 반환값 검증
+            assertEquals(coupon.getId(), response.couponId());
+            assertEquals(coupon.getCouponName(), response.couponName());
+            assertNotNull(response.code());
+            assertTrue(response.isValid());
+            assertNotNull(response.codeCouponId());
 
-        // then
-        CouponCode couponCode = couponCodeRepository.findById(1L).get();
-        assertEquals(1L, couponCode.getCoupon().getId());
+            // DB 상태 검증
+            CouponCode couponCode =
+                    couponCodeRepository.findById(response.codeCouponId()).get();
+            assertEquals(coupon.getId(), couponCode.getCoupon().getId());
+            assertTrue(couponCode.getIsValid());
+            assertNotNull(couponCode.getCode());
+        }
     }
 
     @Nested
@@ -239,19 +271,24 @@ class CouponServiceTest extends IntegrationTest {
             // given
             Member member = createMember();
             UserDetails userDetails = createUserDetails(member);
-            create5000DiscountCoupon();
+            Coupon coupon = createCoupon();
 
-            CouponCodeCreateRequest codeCreateRequest = new CouponCodeCreateRequest(1L);
-            couponService.createCouponCode(codeCreateRequest);
-            CouponCode couponCode = couponCodeRepository.findById(1L).get();
+            CouponCodeCreateRequest codeCreateRequest = new CouponCodeCreateRequest(coupon.getId());
+            CouponCodeResponse codeResponse = couponService.createCouponCode(codeCreateRequest);
 
             // when
-            couponService.useCouponCode(userDetails, new CouponCodeUseRequest(couponCode.getCode()));
+            couponService.useCouponCode(userDetails, new CouponCodeUseRequest(codeResponse.code()));
 
             // then
-            CouponCode updatedCouponCode = couponCodeRepository.findById(1L).get();
+            CouponCode updatedCouponCode =
+                    couponCodeRepository.findById(codeResponse.codeCouponId()).get();
             assertEquals(false, updatedCouponCode.getIsValid());
             assertNotNull(updatedCouponCode.getIssuedCoupon());
+
+            // 발급된 쿠폰이 올바르게 생성되었는지 확인
+            assertEquals(
+                    member.getId(),
+                    updatedCouponCode.getIssuedCoupon().getMember().getId());
         }
 
         @Test
@@ -272,18 +309,23 @@ class CouponServiceTest extends IntegrationTest {
             // given
             Member member = createMember();
             UserDetails userDetails = createUserDetails(member);
-            create5000DiscountCoupon();
+            Coupon coupon = createCoupon();
 
-            CouponCodeCreateRequest codeCreateRequest = new CouponCodeCreateRequest(1L);
-            couponService.createCouponCode(codeCreateRequest);
-            CouponCode couponCode = couponCodeRepository.findById(1L).get();
+            CouponCodeCreateRequest codeCreateRequest = new CouponCodeCreateRequest(coupon.getId());
+            CouponCodeResponse codeResponse = couponService.createCouponCode(codeCreateRequest);
 
-            couponService.useCouponCode(userDetails, new CouponCodeUseRequest(couponCode.getCode()));
+            couponService.useCouponCode(userDetails, new CouponCodeUseRequest(codeResponse.code()));
 
             // when-then
             CustomException exception = assertThrows(
                     CustomException.class,
-                    () -> couponService.useCouponCode(userDetails, new CouponCodeUseRequest(couponCode.getCode())));
+                    () -> couponService.useCouponCode(userDetails, new CouponCodeUseRequest(codeResponse.code())));
+            assertEquals(ErrorCode.COUPON_CODE_ALREADY_USED, exception.getErrorCode());
         }
+    }
+
+    private Coupon createCoupon() {
+        Coupon coupon = Coupon.create("테스트쿠폰", BigDecimal.valueOf(5000L));
+        return couponRepository.save(coupon);
     }
 }
